[package]
name = "snpdep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.44.1"
rayon = "1.7"
clap = { version = "4.3.19", features = ["derive"] }
indicatif = "0.17.5"
separator = "0.4.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
